

## Unreleased
### Added
- [UPGRADE] [HBSD13] Add a script to register new Vulture's HBSD13 own repositories (and disable previous ones)
- [UPGRADE] [HBSD13] Add an upgrade script to go from HBSD12 to HBSD13 (and switch to Vulture's own repositories)
### Changed
- [SYSTEM] [MOTD] Updated MOTD to notify about new script to upgrade to HBSD13


## [2.0.11] - 2023-03-01
### Fixed
- [HAPROXY] [SYSTEM_LOGGING] Internal Haproxy logging through Rsyslog didn't work


## [2.0.10] - 2023-03-01
### Changed
- [LOGROTATE] decrease retention time of /var/log/pf/pf.log files to 7
- [MKJAIL_RSYSLOG] Mount /var/log/pf as RW in Rsyslog jail
- [MOTD] Adapt Vulture MOTD to HBSD13
### Added
- [LOGROTATE] Add log rotation for new /zroot/rsyslog/var/log/internal/pf.conf parsed pf logs
### Removed
- [SYSTEM] Don't package a custom netif script anymore


## [2.0.9] - 2023-02-16
### Changed
- [UPDATE_SYSTEM] Reload Haproxy after an upgrade instead of stopping/starting it
- [SYSTEM] [RC] Set system network config in /etc/rc.conf instead of /etc/rc.conf.d/network
### Added
- [RSYSLOG] [CONFIG] new static ruleset for haproxy global logs parsing and writing
### Fixed
- [LOGROTATE] [CONFIG] Wrong extension '.gz.gz' on logrotated haproxy log files


## [2.0.8] - 2023-01-18
### Fixed
- [UPDATE_SYSTEM] Don't use the jail's hbsd-update.conf file for jail system upgrades
### Changed
- [LOADER] Update zfs options to increase ARC size and increase disk performances


## [2.0.7] - 2022-12-21
### Fixed
- [SCRIPTS] [PROXY.SH] Correctly reload PF configuration when changing proxy settings


## [2.0.6] - 2022-12-15
### Fixed
- [SCRIPTS] [PROXY.SH] Wrong proxy configuration set in pkg.conf
- [SCRIPTS] Remove several references to removed apache24 package


## [2.0.5] - 2022-12-09
### Removed
- [JAIL] [APACHE] Disable and uninstall apache from jail
### Fixed
 [CLUSTER_JOIN] Correctly stop and restart local services during cluster join
 [CLUSTER_JOIN] Correctly add the master's hostname/ip in /etc/hosts